# re-github-app

./: .editorconfig  .gitignore  Makefile  README.md  app.py  pyproject.toml
endpoint/: README.md  endpoint_stack.py
endpoint/lambda/: index.py
frontend/: README.md
release/: README.md
release/checks/dependencies/: check_dependencies_stack.py
release/checks/dependencies/lambda/: index.py
release/checks/parent_pom/: check_parent_pom_stack.py
release/checks/quality_gate/: check_quality_gate_stack.py
release/checks/whitesource/: check_whitesource_stack.py
release/maven-central/: check_maven_central_stack.py
